--- a/app/src/main/res/layout/album_card_form.xml
+++ b/app/src/main/res/layout/album_card_form.xml
@@ -7,12 +7,14 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginLeft="4dp"
                                     android:layout_marginRight="4dp"
+                                    android:layout_marginTop="4dp"
                                     android:layout_marginBottom="4dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/cardBack"
         >
 
         <ImageView
