--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="colorPrimaryTransparent">#eb51535e</color>
     <color name="colorPrimaryDarkTransparent">#e2424768</color>
     <color name="grey">#dadada</color>
+    <color name="cardBack">#e83c494e</color>
 
 </resources>
