--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -21,26 +22,28 @@
             android:id="@+id/search_edit_text"
             android:layout_width="180dp"
             android:layout_height="30dp"
+            android:layout_gravity="right"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:background="@color/with_grad"
             android:gravity="center"
-            android:layout_gravity="center"
             android:hint="@string/search"
-            android:background="@drawable/rounded_edittext"
+            android:imeOptions="actionSearch"
             android:inputType="text"
-            android:textSize="16sp"
             android:maxLines="4"
             android:minLines="1"
             android:singleLine="false"
-            android:imeOptions="actionSearch"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tablayout"
