--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,15 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            android:textAlignment="center"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways"/>
         <EditText
             android:id="@+id/search_edit_text"
-            android:layout_width="180dp"
+            android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_gravity="right"
+            android:layout_gravity="center"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
@@ -33,6 +34,7 @@
             android:gravity="center"
             android:hint="@string/search"
             android:imeOptions="actionSearch"
+            android:drawableEnd="@drawable/ic_search_black_24dp"
             android:inputType="text"
             android:maxLines="4"
             android:minLines="1"
