--- a/app/src/main/res/layout/song_card_form.xml
+++ b/app/src/main/res/layout/song_card_form.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="120dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
@@ -18,7 +18,7 @@
 
         <ImageView
             android:id="@+id/song_image"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
@@ -39,9 +39,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:maxLines="4"
-                android:minLines="1"
+                android:layout_marginEnd="16dp"
+                android:maxLines="2"
                 android:singleLine="false"
+                android:ellipsize="end"
                 android:text="song"
                 android:textColor="@color/w"
                 android:textSize="16sp"
@@ -51,34 +52,32 @@
             <TextView
                 android:id="@+id/song_album_name"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:maxLines="4"
-                android:minLines="1"
-                android:singleLine="false"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="song_album_name"
                 android:textColor="@color/w"
                 android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/song_name" />
+                app:layout_constraintBottom_toTopOf="@+id/song_artist_name"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/song_artist_name"
                 android:layout_width="match_parent"
                 android:layout_height="16dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:maxLines="4"
-                android:minLines="1"
-                android:singleLine="false"
+                android:layout_marginEnd="16dp"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="song_artist"
                 android:textColor="@color/w"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/song_album_name" />
+                app:layout_constraintStart_toStartOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.constraint.ConstraintLayout>
 
