--- a/app/src/main/res/layout/album_card_form.xml
+++ b/app/src/main/res/layout/album_card_form.xml
@@ -29,11 +29,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <ProgressBar
+            android:id="@+id/image_progress_bar"
+            android:theme="@style/AppTheme.WhiteAccent"
+            android:layout_width="42dp"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <LinearLayout
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:background="@color/with_grad"
             android:layout_height="80dp"
+            android:background="@color/with_grad"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="@+id/album_image">
 
             <TextView
@@ -41,12 +58,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="2"
                 android:singleLine="false"
-                android:ellipsize="end"
                 android:textColor="@color/w"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/artist_name"
@@ -59,12 +76,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="1"
                 android:singleLine="false"
-                android:ellipsize="end"
                 android:textColor="@color/w"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/album_image"
