--- a/app/src/main/res/layout/information_album_form.xml
+++ b/app/src/main/res/layout/information_album_form.xml
@@ -63,7 +63,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <TextView
-                android:id="@+id/album_name"
+                android:id="@+id/artist_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="8dp"
@@ -75,7 +75,7 @@
                 android:textSize="16sp" />
 
             <TextView
-                android:id="@+id/artist_name"
+                android:id="@+id/information"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
