--- a/app/src/main/res/drawable/custom_ripple_effect_after_21.xml
+++ b/app/src/main/res/drawable/custom_ripple_effect_after_21.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/click_accent">
+    android:color="@color/color_dialog_alert">
 
     <item
         android:id="@android:id/mask"
-        android:drawable="@android:color/white" />
+        android:drawable="@android:color/holo_red_dark" />
 </ripple>
