--- a/app/src/main/res/layout/song_form_dashboard.xml
+++ b/app/src/main/res/layout/song_form_dashboard.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
     android:layout_width="150dp"
-    android:background="@color/color_bottom_sheet_navigation_bar"
     android:layout_height="200dp">
 
     <android.support.constraint.ConstraintLayout
@@ -41,12 +40,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout
             android:id="@+id/cl_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/color_bottom_sheet_navigation_bar"
             android:orientation="vertical"
+            android:background="@color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/album_image">
 
@@ -84,7 +83,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-        </LinearLayout>
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
 
