--- a/app/src/main/res/layout/dashboard_music_tab_fragment.xml
+++ b/app/src/main/res/layout/dashboard_music_tab_fragment.xml
@@ -1,8 +1,11 @@
 <android.support.v7.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/recycler_view_music_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="fill_vertical"
+    android:clipToPadding="false"
     android:focusableInTouchMode="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:paddingBottom="?attr/actionBarSize"
+    android:paddingTop="?attr/actionBarSize">
 </android.support.v7.widget.RecyclerView>
