--- a/app/src/main/res/layout/dashboard_parent_item_k.xml
+++ b/app/src/main/res/layout/dashboard_parent_item_k.xml
@@ -1,5 +1,4 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,30 +15,33 @@
             android:id="@+id/section_header"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/custom_ripple_effect_after_21"
+            android:clickable="true"
+            android:focusable="true"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/text_view_header"
+                style="@style/HeaderTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/HeaderTextStyle"
-                android:gravity="start"
-                android:layout_weight="1"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:layout_weight="1"
+                android:gravity="start"
                 tools:text="Header" />
 
             <TextView
+                style="@style/MoreTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/MoreTextStyle"
-                android:gravity="end"
-                android:layout_weight="1"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="@string/text_header_more"/>
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="@string/text_header_more" />
 
         </LinearLayout>
 
