--- a/app/src/main/res/layout/bottom_parent_tab_fragment.xml
+++ b/app/src/main/res/layout/bottom_parent_tab_fragment.xml
@@ -1,12 +1,19 @@
-<android.support.v7.widget.RecyclerView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/recycler_view_parent_tab_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="fill_vertical"
-    android:clipToPadding="false"
-    android:layoutAnimation="@anim/layout_animation_fall_down"
-    android:focusableInTouchMode="true"
     android:paddingBottom="?attr/actionBarSize"
     android:paddingTop="?attr/actionBarSize">
-</android.support.v7.widget.RecyclerView>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_parent_tab_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="fill_vertical"
+        android:clipToPadding="false"
+        android:layoutAnimation="@anim/layout_animation_fall_down"
+        android:focusableInTouchMode="true">
+    </android.support.v7.widget.RecyclerView>
+
+</FrameLayout>
