--- a/app/src/main/res/layout/bottom_navigation_fragment.xml
+++ b/app/src/main/res/layout/bottom_navigation_fragment.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_bottom_sheet_navigation_bar"
     android:fitsSystemWindows="true"
-    tools:context="com.nimtego.plectrum.presentation.ui.activity.MainActivity">
+    tools:context="com.nimtego.plectrum.presentation.ui.activity.AppActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
