--- a/app/src/main/res/layout/bottom_navigation_fragment.xml
+++ b/app/src/main/res/layout/bottom_navigation_fragment.xml
@@ -58,17 +58,14 @@
         android:focusableInTouchMode="true">
     </FrameLayout>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="0dp"
         android:layout_gravity="bottom"
-        android:elevation="4dp"
-        app:itemIconTint="@drawable/navigation_bar_item_state"
-        app:itemTextColor="@drawable/navigation_bar_item_state"
-        android:background="@color/color_bottom_sheet_navigation_bar"
-        android:layout_marginStart="0dp"
-        app:menu="@menu/navigation"/>
+        android:background="@color/color_bottom_sheet_navigation_bar"/>
 </android.support.design.widget.CoordinatorLayout>
+
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
 
