--- a/app/src/main/res/layout/more_section_fragment.xml
+++ b/app/src/main/res/layout/more_section_fragment.xml
@@ -9,6 +9,7 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingBottom="50dp"
+        android:layoutAnimation="@anim/layout_animation_fall_down"
         android:scrollbars="vertical"
         android:text="@string/no_data_available"/>
 </FrameLayout>
