--- a/app/src/main/res/layout/layout_tab_content_child_item.xml
+++ b/app/src/main/res/layout/layout_tab_content_child_item.xml
@@ -2,9 +2,12 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
-    android:elevation="1dp"
-    android:layout_width="150dp"
+    card_view:cardElevation="1dp"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardPreventCornerOverlap="false"
+    android:layout_width="100dp"
     android:layout_height="200dp">
 
     <android.support.constraint.ConstraintLayout
