--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,12 +56,12 @@
     </style>
 
     <style name="MySearchViewStyle" parent="Widget.AppCompat.SearchView">
-        <item name="android:textSize">@dimen/value_text_view</item>
+        <item name="android:textSize">@dimen/rounded_edit_text</item>
         <item name="android:textColor">@color/edit_text_color</item>
         <item name="android:textColorHint">@color/color_vendor_dark_grey_blue</item>
         <item name="android:textColorHighlight">@color/edit_text_color</item>
         <item name="android:lineSpacingExtra">6sp</item>
-        <item name="android:drawablePadding">2dp</item>
+        <!--<item name="android:drawablePadding">2dp</item>-->
     </style>
 
 </resources>
